--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/main.scss public/css/main.css"
+    "build-css": "node-sass --include-path scss scss/main.scss public/css/main.css",
+    "watch:sass": "node-sass -w --include-path scss scss/main.scss public/css/main.css"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "webpack": "^2.4.1"
   },
   "dependencies": {
+    "bulma": "0.4.1",
     "material-ui": "^0.18.0"
   }
 }
