--- a/package.json
+++ b/package.json
@@ -12,29 +12,18 @@
     "type": "git",
     "url": "git+https://github.com/fryymann715/fryymann715.github.io.git"
   },
-  "author": "Ian Deans",
+  "author": { 
+    "name": "Ian Deans",
+    "email": "ideans715@gmail.com"
+    },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/fryymann715/fryymann715.github.io/issues"
   },
   "homepage": "https://github.com/fryymann715/fryymann715.github.io#readme",
   "devDependencies": {
-    "babel-core": "6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "1.4.0",
-    "babel-preset-react": "^6.24.1",
-    "caniuse-api": "^1.5.2",
-    "node-sass": "4.5.2",
-    "react": "15.5.4",
-    "react-dom": "15.5.4",
-    "react-swipeable-views": "^0.12.1",
-    "react-tap-event-plugin": "^2.0.1",
-    "react-transition-group": "1.1.3",
-    "webpack": "^2.4.1"
+    "node-sass": "4.5.2"
   },
   "dependencies": {
-    "bulma": "0.4.1",
-    "material-ui": "^0.18.0"
   }
 }
