--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fryymann715.github.io",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "description": "Personal Site",
   "main": "index.js",
   "scripts": {
@@ -12,18 +12,15 @@
     "type": "git",
     "url": "git+https://github.com/fryymann715/fryymann715.github.io.git"
   },
-  "author": { 
+  "author": {
     "name": "Ian Deans",
     "email": "ideans715@gmail.com"
-    },
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/fryymann715/fryymann715.github.io/issues"
   },
   "homepage": "https://github.com/fryymann715/fryymann715.github.io#readme",
-  "devDependencies": {
-    "node-sass": "4.5.2"
-  },
-  "dependencies": {
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
